# PyPoe

./: .gitignore  README.md  debug_env_loading.py  pyproject.toml
docs/: conversation_management.md
src/pypoe/: STRUCTURE.md  __init__.py  cli.py  config.py  logging_db.py  poe_client.py  poe_history.py  slack_bot.py  slack_runner.py
src/pypoe/core/: client.py.backup  enhanced_history.py  history.py  manager.py
src/pypoe/docs/: README.md  README_SETUP.md  README_SLACK.md  bot_locking_feature.md
src/pypoe/examples/: __init__.py  basic_usage.py  debug_scrolling.py  demo_scroll_test.py  demo_web_history.py  web_sample.py
src/pypoe/interfaces/: __init__.py
src/pypoe/interfaces/slack/: __init__.py  bot.py  runner.py
src/pypoe/interfaces/web/: __init__.py  app.py  runner.py
src/pypoe/interfaces/web/static/: app.js  status-bar.js  style.css
src/pypoe/interfaces/web/templates/: index.html  settings.html  storage.html
src/pypoe/poe/: __init__.py  client.py  enhanced_history.py
src/pypoe/scripts/: README.md  __init__.py  debug_linux_history.py  linux_history_troubleshoot.py  simple_linux_debug.py
src/pypoe/scripts/setup/: README_daemon.md  _path_utils.py  pypoe-web.service  pypoe_health_check.py  setup_credentials.py  setup_webui.py
src/pypoe/scripts/utils/: quick_debug.py  update_models.py
src/pypoe/slack/: __init__.py  bot.py  runner.py
src/pypoe/tests/: __init__.py  pytest.ini  test_bot_locking.py  test_chat_scrolling.py  test_client.py  test_integrations.py
src/pypoe/web/: __init__.py  app.py  runner.py
src/pypoe/web/static/: app.js  style.css
src/pypoe/web/templates/: conversation_detail.html  history.html  index.html  settings.html  storage.html
tests/: test_client.py  test_conf.py  test_integrations.py
users/: README.md  basic_usage.py  pypoe.env.example  quick_scroll_test.py  test_bot_locking.py  test_chat_scrolling.py  test_updated_models.py  test_web_history.py  web_sample.py
users/history/: README.md
users/setup/: README_daemon.md  pypoe-web.service  run_pypoe_daemon.py  setup_credentials.py  setup_tailscale.py  setup_webui.py  slack_setup.md
