[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypoe"
version = "2.0.0"
description = "Python client for Poe.com using the official API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi_poe>=0.0.36",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
# Option 1: Minimal CLI Only (default installation)
# pip install -e .
# Includes: Command line interface only
# Use for: Automation scripts and minimal deployments

# Option 2: CLI + Web Interface  
# pip install -e ".[web-ui]"
# Includes: Command line tools + web interface
# Use for: Personal use with both terminal and browser access
web-ui = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

# Option 3: Complete Installation (All Features)
# pip install -e ".[all]"
# Includes: CLI + Web + Slack bot integration  
# Use for: Team deployments with all interface options
all = [
    "pypoe[web-ui]",
    "slack-bolt>=1.18.1",
    "slack-sdk>=3.26.2",
]

# Option 4: Development Mode
# pip install -e ".[dev]" 
# Includes: Everything + testing tools + development dependencies
# Use for: Contributing to PyPoe or custom development
dev = [
    "pypoe[all]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pypoe = "pypoe.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/pypoe"
Repository = "https://github.com/your-username/pypoe"
Issues = "https://github.com/your-username/pypoe/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pypoe*"]
exclude = ["user_scripts*", "tests*"] 